--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div>
 
 		<div class="start">
-			<p> <b> Start Now! </b> </p>
+			<a href="/Start Page/pricing.html"> <p> <b> Start Now! </b> </p> </a>
 		</div>
 
 		<div class="trial">
