Modified index.html and style.css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div>
 
 		<div class="start">
-			<a href="/Start Page/pricing.html"> <p> <b> Start Now! </b> </p> </a>
+			<a href="/Start Page/pricing.html"> <p id="p_001"> <b> Start Now! </b> </p> </a>
 		</div>
 
 		<div class="trial">
